# workout-timer-project

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  settings.py  setup.py  workouts.db  workouts2.db
diary/: settings.py
entries/: admin.py  forms.py  models.py  settings.py  urls.py  views.py  workouts.db  workouts2.db
entries/migrations/: 0001_initial.py  0002_auto_20230819_1533.py  0003_rename_exerciseorbreak_entry_title.py  0004_rename_timeforexercise_entry_content.py  0005_entry_seconds.py  0006_auto_20230821_2130.py  0007_time_minutes.py  0008_workouts.py  0009_remove_entry_content.py  0010_auto_20230824_1655.py  0011_auto_20230824_1840.py  0012_rename_workout_entry_exercise.py  0013_auto_20230830_1648.py  0014_auto_20230830_1649.py  0015_alter_entry_order_in_workout.py  0016_auto_20230918_0707.py  0017_auto_20230918_0709.py  0018_existingentry1.py  0019_existingentry2_existingentry3_existingentry4_existingentry5.py  0020_alter_entry_exercise.py  0021_alter_entry_exercise.py  0022_goworkout.py  0023_alter_entry_order_in_workout.py  0024_premade1_premade2_premade3_premade4_premade5.py
entries/static/css/: choose_prev.css  diary.css  dropdown.css  entry_list.css
entries/templates/: dragdrop.html
entries/templates/buildworkout/: buildworkout.html  dropdown.html
entries/templates/entries/: base.html  choose_prev.html  entry_confirm_delete.html  entry_detail.html  (+12 more)
files/: db.sqlite3
files/diary/: urls.py
files/entries/: admin.py  models.py  urls.py  views.py
staticfiles/css/: build_workout.css  choose_prev.css  entry_list.css
(+1 files in other folders)
