[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "workout-app"
version = "0.1.0"
description = "Your package description"
authors = ["Julian Aparicio <julapa1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# List your package dependencies here
flask = "^2.0.0"
# Add other dependencies as needed

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
